--- a/Projects.css
+++ b/Projects.css
@@ -1,73 +1,70 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 320px;
+  min-height: 397px;
 }
 
 .u-section-1 .u-layout-wrap-1 {
-  margin: 50px 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .u-section-1 .u-layout-cell-1 {
-  min-height: 220px;
+  min-height: 396px;
 }
 
 .u-section-1 .u-container-layout-1 {
-  padding: 20px 17px;
+  padding: 20px 0;
 }
 
 .u-section-1 .u-image-1 {
-  height: 145px;
-  object-position: 50% 0%;
-  margin: 0;
+  width: 161px;
+  height: 184px;
+  object-position: 49.76% 0%;
+  margin: 0 auto 0 0;
 }
 
 .u-section-1 .u-layout-cell-2 {
-  min-height: 220px;
+  min-height: 396px;
 }
 
 .u-section-1 .u-container-layout-2 {
-  padding: 10px 30px;
+  padding: 10px 0;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 0 3px 0 0;
+  margin: 0 15px;
 }
 
 .u-section-1 .u-layout-cell-3 {
-  min-height: 318px;
+  min-height: 397px;
 }
 
 .u-section-1 .u-container-layout-3 {
-  padding: 20px 60px;
+  padding: 20px 60px 29px;
 }
 
 .u-section-1 .u-text-2 {
-  margin: 0;
+  background-image: none;
+  margin: 57px 1px 0;
 }
 
 .u-section-1 .u-btn-1 {
   font-weight: 400;
   border-style: none;
-  margin: 30px auto 0 0;
+  margin: 24px auto 0 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 228px;
-  }
-
-  .u-section-1 .u-layout-wrap-1 {
-    margin-right: initial;
-    margin-left: initial;
+    min-height: 417px;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 181px;
+    min-height: 327px;
   }
 
   .u-section-1 .u-image-1 {
-    height: 113px;
-    margin-right: initial;
-    margin-left: initial;
+    width: 141px;
+    height: 161px;
   }
 
   .u-section-1 .u-layout-cell-2 {
@@ -81,25 +78,34 @@
   .u-section-1 .u-layout-cell-3 {
     min-height: 262px;
   }
+
+  .u-section-1 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 215px;
+    min-height: 224px;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 201px;
   }
 
   .u-section-1 .u-image-1 {
-    height: 78px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 136px;
+    width: 108px;
   }
 
   .u-section-1 .u-layout-cell-2 {
     min-height: 100px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-left: 7px;
+    margin-right: 7px;
   }
 
   .u-section-1 .u-layout-cell-3 {
@@ -114,27 +120,18 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 341px;
+    min-height: 1355px;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 68px;
-  }
-
-  .u-section-1 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
+    min-height: 1005px;
   }
 
   .u-section-1 .u-image-1 {
-    height: 542px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-1 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
+    width: 490px;
+    height: 610px;
+    margin-top: 287px;
+    margin-right: 20px;
   }
 
   .u-section-1 .u-container-layout-3 {
@@ -144,25 +141,35 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 891px;
+  }
+
   .u-section-1 .u-layout-cell-1 {
-    min-height: 15px;
+    min-height: 633px;
   }
 
   .u-section-1 .u-image-1 {
-    height: 334px;
-    margin-right: initial;
-    margin-left: initial;
+    width: 340px;
+    height: 424px;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-right: 0;
+    margin-left: 0;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 320px;
+  min-height: 360px;
 }
 
 .u-section-2 .u-layout-wrap-1 {
-  margin: 50px 0;
+  margin-top: 0;
+  margin-bottom: 17px;
 }
 
 .u-section-2 .u-layout-cell-1 {
-  min-height: 318px;
+  min-height: 343px;
 }
 
 .u-section-2 .u-container-layout-1 {
@@ -171,25 +178,25 @@
 
 .u-section-2 .u-image-1 {
   width: 161px;
-  height: 203px;
+  height: 145px;
   object-position: 27.26% 100%;
-  margin: 64px auto 0;
+  margin: 52px 0 0 auto;
 }
 
 .u-section-2 .u-layout-cell-2 {
-  min-height: 220px;
+  min-height: 343px;
 }
 
 .u-section-2 .u-container-layout-2 {
-  padding: 10px 30px;
+  padding: 10px 0;
 }
 
 .u-section-2 .u-text-1 {
-  margin: 0 3px 0 0;
+  margin: 66px 15px 0;
 }
 
 .u-section-2 .u-layout-cell-3 {
-  min-height: 318px;
+  min-height: 343px;
 }
 
 .u-section-2 .u-container-layout-3 {
@@ -197,32 +204,33 @@
 }
 
 .u-section-2 .u-text-2 {
-  margin: 76px 1px 0 0;
+  background-image: none;
+  margin: 0 1px;
 }
 
 .u-section-2 .u-btn-1 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-2 .u-btn-2 {
   font-weight: 400;
   border-style: none;
-  margin: 30px auto 0 0;
+  margin: 31px auto 0 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 228px;
-  }
-
-  .u-section-2 .u-layout-wrap-1 {
-    margin-right: initial;
-    margin-left: initial;
+    min-height: 470px;
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 262px;
+    min-height: 283px;
   }
 
   .u-section-2 .u-image-1 {
     width: 141px;
-    height: 178px;
+    height: 127px;
   }
 
   .u-section-2 .u-layout-cell-2 {
@@ -238,13 +246,14 @@
   }
 
   .u-section-2 .u-text-2 {
+    margin-left: 0;
     margin-right: 0;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 215px;
+    min-height: 314px;
   }
 
   .u-section-2 .u-layout-cell-1 {
@@ -260,6 +269,11 @@
     min-height: 100px;
   }
 
+  .u-section-2 .u-text-1 {
+    margin-left: 7px;
+    margin-right: 7px;
+  }
+
   .u-section-2 .u-layout-cell-3 {
     min-height: 100px;
   }
@@ -272,7 +286,7 @@
 
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 341px;
+    min-height: 1247px;
   }
 
   .u-section-2 .u-layout-cell-1 {
@@ -286,11 +300,6 @@
     margin-right: 20px;
   }
 
-  .u-section-2 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
   .u-section-2 .u-container-layout-3 {
     padding-left: 10px;
     padding-right: 10px;
@@ -298,11 +307,337 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 872px;
+  }
+
   .u-section-2 .u-layout-cell-1 {
     min-height: 633px;
   }
 
   .u-section-2 .u-image-1 {
+    width: 340px;
+    height: 424px;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-right: 0;
+    margin-left: 0;
+  }
+}.u-section-3 .u-sheet-1 {
+  min-height: 351px;
+}
+
+.u-section-3 .u-layout-wrap-1 {
+  margin: 0 0 30px;
+}
+
+.u-section-3 .u-layout-cell-1 {
+  min-height: 220px;
+}
+
+.u-section-3 .u-container-layout-1 {
+  padding: 20px 17px;
+}
+
+.u-section-3 .u-image-1 {
+  height: 145px;
+  object-position: 50% 0%;
+  margin: 0;
+}
+
+.u-section-3 .u-layout-cell-2 {
+  min-height: 220px;
+}
+
+.u-section-3 .u-container-layout-2 {
+  padding: 10px 30px;
+}
+
+.u-section-3 .u-text-1 {
+  margin: 0 3px 0 0;
+}
+
+.u-section-3 .u-layout-cell-3 {
+  min-height: 321px;
+}
+
+.u-section-3 .u-container-layout-3 {
+  padding: 20px 60px;
+}
+
+.u-section-3 .u-text-2 {
+  margin: 0;
+}
+
+.u-section-3 .u-btn-1 {
+  font-weight: 400;
+  border-style: none;
+  margin: 15px auto 0 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 228px;
+  }
+
+  .u-section-3 .u-layout-wrap-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 181px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 113px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 181px;
+  }
+
+  .u-section-3 .u-text-1 {
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-layout-cell-3 {
+    min-height: 262px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 215px;
+  }
+
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 78px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+
+  .u-section-3 .u-layout-cell-3 {
+    min-height: 100px;
+  }
+
+  .u-section-3 .u-container-layout-3 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 341px;
+  }
+
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 68px;
+  }
+
+  .u-section-3 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 542px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-3 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 15px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 334px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+}.u-section-4 .u-sheet-1 {
+  min-height: 299px;
+}
+
+.u-section-4 .u-layout-wrap-1 {
+  margin-top: -45px;
+  margin-bottom: 51px;
+}
+
+.u-section-4 .u-layout-cell-1 {
+  min-height: 293px;
+}
+
+.u-section-4 .u-container-layout-1 {
+  padding: 20px 0;
+}
+
+.u-section-4 .u-image-1 {
+  width: 161px;
+  height: 203px;
+  object-position: 27.26% 100%;
+  margin: 39px auto 0;
+}
+
+.u-section-4 .u-layout-cell-2 {
+  min-height: 293px;
+}
+
+.u-section-4 .u-container-layout-2 {
+  padding: 10px 30px;
+}
+
+.u-section-4 .u-text-1 {
+  margin: 0 2px;
+}
+
+.u-section-4 .u-layout-cell-3 {
+  min-height: 293px;
+}
+
+.u-section-4 .u-container-layout-3 {
+  padding: 20px 58px;
+}
+
+.u-section-4 .u-text-2 {
+  margin: 0 0 0 5px;
+}
+
+.u-section-4 .u-btn-1 {
+  font-weight: 400;
+  border-style: none;
+  margin: 29px auto 0 2px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 256px;
+  }
+
+  .u-section-4 .u-layout-cell-1 {
+    min-height: 242px;
+  }
+
+  .u-section-4 .u-image-1 {
+    width: 141px;
+    height: 178px;
+  }
+
+  .u-section-4 .u-layout-cell-2 {
+    min-height: 181px;
+  }
+
+  .u-section-4 .u-text-1 {
+    margin-right: 0;
+  }
+
+  .u-section-4 .u-layout-cell-3 {
+    min-height: 262px;
+  }
+
+  .u-section-4 .u-text-2 {
+    margin-left: 0;
+  }
+
+  .u-section-4 .u-btn-1 {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 172px;
+  }
+
+  .u-section-4 .u-layout-cell-1 {
+    min-height: 201px;
+  }
+
+  .u-section-4 .u-image-1 {
+    height: 136px;
+    width: 108px;
+  }
+
+  .u-section-4 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+
+  .u-section-4 .u-text-1 {
+    margin-left: 0;
+  }
+
+  .u-section-4 .u-layout-cell-3 {
+    min-height: 100px;
+  }
+
+  .u-section-4 .u-container-layout-3 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 1095px;
+  }
+
+  .u-section-4 .u-layout-cell-1 {
+    min-height: 1005px;
+  }
+
+  .u-section-4 .u-image-1 {
+    width: 490px;
+    height: 610px;
+    margin-top: 287px;
+    margin-right: 20px;
+  }
+
+  .u-section-4 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-4 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 724px;
+  }
+
+  .u-section-4 .u-layout-cell-1 {
+    min-height: 633px;
+  }
+
+  .u-section-4 .u-image-1 {
     width: 340px;
     height: 424px;
     margin-right: 0;
