--- a/Research.css
+++ b/Research.css
@@ -1,204 +1,789 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 832px;
+  min-height: 100vh;
 }
 
 .u-section-1 .u-layout-wrap-1 {
-  margin: 55px auto 55px 0;
-}
-
-.u-section-1 .u-layout-cell-1 {
-  min-height: 314px;
-}
-
-.u-section-1 .u-container-layout-1 {
-  padding: 30px 80px 30px 30px;
-}
-
-.u-section-1 .u-text-1 {
-  margin: 20px 0 0;
-}
-
-.u-section-1 .u-text-2 {
-  margin-left: 0;
-  margin-bottom: 0;
-  margin-top: 20px;
-}
-
-.u-section-1 .u-btn-1 {
-  background-image: none;
-  border-style: none none solid;
-  margin-left: 0;
-  margin-right: 0;
-  margin-bottom: 0;
-  padding: 0;
-}
-
-.u-section-1 .u-text-3 {
-  margin: 22px 0 0;
+  margin-top: 90px;
+  margin-bottom: 33px;
 }
 
 .u-section-1 .u-image-1 {
-  min-height: 484px;
-  background-image: url("images/Skrmbillede2021-11-15151850.png");
-  background-position: 50% 26.15%;
+  min-height: 680px;
+  background-image: url("images/Skrmbillede2023-10-27004717.png");
+  background-position: 4.44% 50%;
+}
+
+.u-section-1 .u-container-layout-1 {
+  padding: 30px 60px;
+}
+
+.u-section-1 .u-layout-cell-2 {
+  min-height: 680px;
 }
 
 .u-section-1 .u-container-layout-2 {
-  padding: 0 0 30px;
-}
-
-.u-section-1 .u-layout-cell-3 {
-  min-height: 468px;
-}
-
-.u-section-1 .u-container-layout-3 {
-  padding: 30px 0 0;
-}
-
-.u-section-1 .u-image-2 {
-  width: 642px;
-  height: 438px;
-  object-position: 14.71% 50%;
-  margin: 0 auto 0 -72px;
-}
-
-.u-section-1 .u-layout-cell-4 {
-  min-height: 254px;
-}
-
-.u-section-1 .u-container-layout-4 {
-  padding: 30px;
-}
-
-.u-section-1 .u-text-4 {
-  margin: 0;
-}
-
-.u-section-1 .u-btn-2 {
-  background-image: none;
-  border-style: none none solid;
-  margin: 20px 0 0;
   padding: 0;
 }
 
-.u-section-1 .u-text-5 {
-  margin: 30px 0 0;
+.u-section-1 .u-text-1 {
+  margin: 41px 72px 0 48px;
+}
+
+.u-section-1 .u-text-2 {
+  margin: 7px 72px 0 48px;
+}
+
+.u-section-1 .u-text-3 {
+  margin: 90px 72px 0 48px;
+}
+
+.u-section-1 .u-btn-1 {
+  text-transform: uppercase;
+  font-size: 0.875rem;
+  letter-spacing: 2px;
+  background-image: none;
+  border-style: solid;
+  margin: 48px auto 0 41px;
+  padding: 10px 34px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 686px;
+    min-height: 784px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 259px;
+    margin-top: 82px;
+    margin-bottom: 32px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 399px;
+    min-height: 561px;
   }
 
-  .u-section-1 .u-layout-cell-3 {
-    min-height: 391px;
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 841px;
   }
 
-  .u-section-1 .u-image-2 {
-    width: 522px;
-    height: 328px;
-    margin-left: -52px;
+  .u-section-1 .u-text-1 {
+    width: auto;
+    margin-top: 40px;
+    margin-right: 19px;
+    margin-left: 11px;
   }
 
-  .u-section-1 .u-layout-cell-4 {
-    min-height: 209px;
+  .u-section-1 .u-text-2 {
+    width: auto;
+    margin-top: 32px;
+    margin-right: 19px;
+    margin-left: 11px;
+  }
+
+  .u-section-1 .u-text-3 {
+    width: auto;
+    margin-top: 63px;
+    margin-right: 19px;
+    margin-left: 11px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: 40px;
+    margin-left: 11px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 525px;
+    min-height: 813px;
   }
 
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 100px;
-  }
-
-  .u-section-1 .u-container-layout-1 {
-    padding-right: 30px;
+  .u-section-1 .u-layout-wrap-1 {
+    margin-top: 84px;
+    margin-bottom: 30px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 100px;
+    min-height: 430px;
   }
 
-  .u-section-1 .u-layout-cell-3 {
-    min-height: 344px;
+  .u-section-1 .u-container-layout-1 {
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
-  .u-section-1 .u-container-layout-3 {
-    padding-top: 0;
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 699px;
   }
 
-  .u-section-1 .u-image-2 {
-    width: 644px;
-    height: 428px;
-    margin-top: -99px;
-    margin-left: -9px;
+  .u-section-1 .u-text-1 {
+    margin-right: -10px;
+    margin-left: 10px;
   }
 
-  .u-section-1 .u-layout-cell-4 {
-    min-height: 100px;
+  .u-section-1 .u-text-2 {
+    margin-top: 30px;
+    margin-right: -10px;
+    margin-left: 10px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 55px;
+    margin-right: -10px;
+    margin-left: 10px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-left: 23px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 394px;
+    min-height: 753px;
+  }
+
+  .u-section-1 .u-image-1 {
+    min-height: 590px;
   }
 
   .u-section-1 .u-container-layout-1 {
-    padding-right: 10px;
     padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 553px;
   }
 
   .u-section-1 .u-image-1 {
     min-height: 371px;
   }
 
-  .u-section-1 .u-layout-cell-3 {
+  .u-section-1 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-left: 0;
+  }
+}.u-section-2 .u-sheet-1 {
+  min-height: 558px;
+}
+
+.u-section-2 .u-layout-wrap-1 {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.u-section-2 .u-layout-cell-1 {
+  min-height: 526px;
+}
+
+.u-section-2 .u-container-layout-1 {
+  padding: 0;
+}
+
+.u-section-2 .u-image-1 {
+  height: 202px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-text-1 {
+  margin: 31px 0 0 60px;
+}
+
+.u-section-2 .u-text-2 {
+  margin: 0 20px 0 60px;
+}
+
+.u-section-2 .u-text-3 {
+  margin: 5px 0 0 60px;
+}
+
+.u-section-2 .u-btn-1 {
+  background-image: none;
+  margin: 32px auto 0 60px;
+}
+
+.u-section-2 .u-btn-2 {
+  background-image: none;
+  margin: -46px auto 0 213px;
+}
+
+.u-section-2 .u-layout-cell-2 {
+  min-height: 526px;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 0;
+}
+
+.u-section-2 .u-text-4 {
+  margin: 26px auto 0 45px;
+}
+
+.u-section-2 .u-text-5 {
+  margin: 0 35px 0 45px;
+}
+
+.u-section-2 .u-text-6 {
+  margin: 20px 26px 0 45px;
+}
+
+.u-section-2 .u-btn-3 {
+  background-image: none;
+  margin: 32px auto 0 45px;
+}
+
+.u-section-2 .u-image-2 {
+  height: 126px;
+  margin-top: 119px;
+  margin-bottom: 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 674px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-top: -16px;
+    margin-bottom: 40px;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    background-position: 50% 50%;
+    min-height: 651px;
+  }
+
+  .u-section-2 .u-image-1 {
+    height: 167px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-3 {
+    width: 450px;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-btn-1 {
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin-left: auto;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 651px;
+  }
+
+  .u-section-2 .u-text-5 {
+    margin-top: 77px;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-6 {
+    width: 450px;
+    margin-top: 124px;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-btn-3 {
+    margin-top: 46px;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 104px;
+    margin-top: 32px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 435px;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-2 .u-image-1 {
+    height: 128px;
+  }
+
+  .u-section-2 .u-text-3 {
+    width: 360px;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin-top: 20px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+
+  .u-section-2 .u-text-5 {
+    margin-top: 103px;
+  }
+
+  .u-section-2 .u-text-6 {
+    margin-top: 70px;
+    width: 360px;
+  }
+
+  .u-section-2 .u-btn-3 {
+    margin-top: 75px;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 80px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 535px;
+  }
+
+  .u-section-2 .u-image-1 {
+    height: 192px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-top: 20px;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin-top: -46px;
+  }
+
+  .u-section-2 .u-text-5 {
+    margin-top: 77px;
+  }
+
+  .u-section-2 .u-text-6 {
+    margin-top: 124px;
+  }
+
+  .u-section-2 .u-btn-3 {
+    margin-top: 46px;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 120px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-image-1 {
+    height: 121px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-top: 0;
+  }
+
+  .u-section-2 .u-text-3 {
+    width: 340px;
+  }
+
+  .u-section-2 .u-text-5 {
+    margin-top: 103px;
+  }
+
+  .u-section-2 .u-text-6 {
+    margin-top: 70px;
+    width: 340px;
+  }
+
+  .u-section-2 .u-btn-3 {
+    margin-top: 75px;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 76px;
+  }
+} .u-section-3 {
+  background-image: none;
+}
+
+.u-section-3 .u-sheet-1 {
+  min-height: 434px;
+}
+
+.u-section-3 .u-layout-wrap-1 {
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-layout-cell-1 {
+  min-height: 444px;
+}
+
+.u-section-3 .u-container-layout-1 {
+  padding: 20px 51px;
+}
+
+.u-section-3 .u-text-1 {
+  margin: 0;
+}
+
+.u-section-3 .u-text-2 {
+  margin: 10px 18px 0 0;
+}
+
+.u-section-3 .u-text-3 {
+  margin: 32px 18px 0 0;
+}
+
+.u-section-3 .u-layout-cell-2 {
+  min-height: 444px;
+}
+
+.u-section-3 .u-container-layout-2 {
+  padding: 0;
+}
+
+.u-section-3 .u-image-1 {
+  width: 652px;
+  height: 311px;
+  margin: 25px -10px 0 auto;
+}
+
+.u-section-3 .u-btn-1 {
+  background-image: none;
+  margin: 25px auto 0 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 550px;
+  }
+
+  .u-section-3 .u-layout-wrap-1 {
+    margin-top: 0;
+  }
+
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 366px;
+  }
+
+  .u-section-3 .u-text-2 {
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-3 {
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 560px;
+    background-position: 50% 50%;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 282px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 90px;
+  }
+
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-3 .u-container-layout-1 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 216px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 100px;
+  }
+
+  .u-section-3 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 321px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 286px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 268px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 180px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+}.u-section-4 .u-sheet-1 {
+  min-height: 832px;
+}
+
+.u-section-4 .u-layout-wrap-1 {
+  margin: 55px auto 55px 0;
+}
+
+.u-section-4 .u-layout-cell-1 {
+  min-height: 314px;
+}
+
+.u-section-4 .u-container-layout-1 {
+  padding: 30px 80px 30px 30px;
+}
+
+.u-section-4 .u-text-1 {
+  margin: 20px 0 0;
+}
+
+.u-section-4 .u-text-2 {
+  margin-left: 0;
+  margin-bottom: 0;
+  margin-top: 20px;
+}
+
+.u-section-4 .u-btn-1 {
+  background-image: none;
+  border-style: solid;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 0;
+}
+
+.u-section-4 .u-text-3 {
+  margin: 22px 0 0;
+}
+
+.u-section-4 .u-image-1 {
+  min-height: 484px;
+  background-image: url("images/Skrmbillede2021-11-15151850.png");
+  background-position: 50% 26.15%;
+}
+
+.u-section-4 .u-container-layout-2 {
+  padding: 0 0 30px;
+}
+
+.u-section-4 .u-layout-cell-3 {
+  min-height: 468px;
+}
+
+.u-section-4 .u-container-layout-3 {
+  padding: 30px 0 0;
+}
+
+.u-section-4 .u-image-2 {
+  width: 642px;
+  height: 438px;
+  object-position: 14.71% 50%;
+  margin: 0 auto 0 -72px;
+}
+
+.u-section-4 .u-layout-cell-4 {
+  min-height: 254px;
+}
+
+.u-section-4 .u-container-layout-4 {
+  padding: 30px;
+}
+
+.u-section-4 .u-text-4 {
+  margin: 0;
+}
+
+.u-section-4 .u-btn-2 {
+  background-image: none;
+  border-style: solid;
+  margin: 20px 0 0;
+}
+
+.u-section-4 .u-text-5 {
+  margin: 30px 0 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 773px;
+  }
+
+  .u-section-4 .u-layout-wrap-1 {
+    margin-top: 0;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-4 .u-layout-cell-1 {
+    min-height: 259px;
+  }
+
+  .u-section-4 .u-btn-1 {
+    padding: 0;
+  }
+
+  .u-section-4 .u-image-1 {
+    min-height: 399px;
+  }
+
+  .u-section-4 .u-layout-cell-3 {
+    min-height: 391px;
+  }
+
+  .u-section-4 .u-image-2 {
+    width: 522px;
+    height: 328px;
+    margin-left: -52px;
+  }
+
+  .u-section-4 .u-layout-cell-4 {
+    min-height: 209px;
+  }
+
+  .u-section-4 .u-btn-2 {
+    padding: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 525px;
+  }
+
+  .u-section-4 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-4 .u-container-layout-1 {
+    padding-right: 30px;
+  }
+
+  .u-section-4 .u-image-1 {
+    min-height: 100px;
+  }
+
+  .u-section-4 .u-layout-cell-3 {
+    min-height: 344px;
+  }
+
+  .u-section-4 .u-container-layout-3 {
+    padding-top: 0;
+  }
+
+  .u-section-4 .u-image-2 {
+    width: 644px;
+    height: 428px;
+    margin-top: -99px;
+    margin-left: -9px;
+  }
+
+  .u-section-4 .u-layout-cell-4 {
+    min-height: 100px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 394px;
+  }
+
+  .u-section-4 .u-container-layout-1 {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+
+  .u-section-4 .u-image-1 {
+    min-height: 371px;
+  }
+
+  .u-section-4 .u-layout-cell-3 {
     min-height: 275px;
   }
 
-  .u-section-1 .u-image-2 {
+  .u-section-4 .u-image-2 {
     width: 495px;
     height: 359px;
     margin-left: 0;
   }
 
-  .u-section-1 .u-container-layout-4 {
+  .u-section-4 .u-container-layout-4 {
     padding-left: 10px;
     padding-right: 10px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-sheet-1 {
+  .u-section-4 .u-sheet-1 {
     min-height: 248px;
   }
 
-  .u-section-1 .u-image-1 {
+  .u-section-4 .u-image-1 {
     min-height: 100px;
   }
 
-  .u-section-1 .u-layout-cell-3 {
+  .u-section-4 .u-layout-cell-3 {
     min-height: 219px;
   }
 
-  .u-section-1 .u-image-2 {
+  .u-section-4 .u-image-2 {
     width: 305px;
     height: 247px;
     margin-top: -62px;
